[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/themes/kenney/kenney.tres" type="Theme" id=1]
[ext_resource path="res://sprites/buildings/command.png" type="Texture" id=2]
[ext_resource path="res://sprites/buildings/basic_tech.png" type="Texture" id=3]
[ext_resource path="res://views/GameHUD.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.239216, 0.756863, 0.0941176, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.596078, 0.109804, 0.109804, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.811765, 0.580392, 0.109804, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.427451, 0.329412, 0, 1 )

[node name="GameHUD" type="PanelContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
grow_vertical = 0
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 154.0

[node name="Building" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1010.0
margin_bottom = 147.0

[node name="Info" type="CenterContainer" parent="MarginContainer/Building"]
margin_right = 334.0
margin_bottom = 147.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Building/Info"]
margin_left = 30.0
margin_right = 304.0
margin_bottom = 147.0
custom_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Building/Info/VBoxContainer"]
margin_right = 274.0
margin_bottom = 79.0
custom_constants/separation = 10
alignment = 1

[node name="Icon" type="TextureRect" parent="MarginContainer/Building/Info/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 79.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Building/Info/VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 274.0
margin_bottom = 79.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 4

[node name="Name" type="Label" parent="MarginContainer/Building/Info/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 24.0
text = "Command"

[node name="Description" type="Label" parent="MarginContainer/Building/Info/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 79.0
text = "Builds buildings and researches tech"
autowrap = true

[node name="HealthProgress" type="ProgressBar" parent="MarginContainer/Building/Info/VBoxContainer"]
margin_top = 89.0
margin_right = 274.0
margin_bottom = 113.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0

[node name="ReloadProgress" type="ProgressBar" parent="MarginContainer/Building/Info/VBoxContainer"]
margin_top = 123.0
margin_right = 274.0
margin_bottom = 147.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0

[node name="Status" type="CenterContainer" parent="MarginContainer/Building"]
margin_left = 338.0
margin_right = 672.0
margin_bottom = 147.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Building/Status"]
margin_left = 67.0
margin_top = 19.0
margin_right = 267.0
margin_bottom = 127.0
rect_min_size = Vector2( 200, 0 )
alignment = 1

[node name="Health" type="Label" parent="MarginContainer/Building/Status/VBoxContainer"]
margin_right = 200.0
margin_bottom = 24.0
text = "Health: 100/100"
autowrap = true

[node name="Battery" type="Label" parent="MarginContainer/Building/Status/VBoxContainer"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 52.0
text = "Battery: 50/50"
autowrap = true

[node name="Energy" type="Label" parent="MarginContainer/Building/Status/VBoxContainer"]
margin_top = 56.0
margin_right = 200.0
margin_bottom = 80.0
text = "Energy: 5/min"
autowrap = true

[node name="Metal" type="Label" parent="MarginContainer/Building/Status/VBoxContainer"]
margin_top = 84.0
margin_right = 200.0
margin_bottom = 108.0
text = "Metal: 2/min"
autowrap = true

[node name="Upgrades" type="CenterContainer" parent="MarginContainer/Building"]
margin_left = 676.0
margin_right = 1010.0
margin_bottom = 147.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/Building/Upgrades"]
margin_left = 24.0
margin_top = 4.0
margin_right = 310.0
margin_bottom = 142.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Building/Upgrades/GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/Building/Upgrades/GridContainer"]
margin_left = 74.0
margin_right = 138.0
margin_bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/Building/Upgrades/GridContainer"]
margin_left = 148.0
margin_right = 212.0
margin_bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/Building/Upgrades/GridContainer"]
margin_left = 222.0
margin_right = 286.0
margin_bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/Building/Upgrades/GridContainer"]
margin_top = 74.0
margin_right = 64.0
margin_bottom = 138.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="TextureRect6" type="TextureRect" parent="MarginContainer/Building/Upgrades/GridContainer"]
margin_left = 74.0
margin_top = 74.0
margin_right = 138.0
margin_bottom = 138.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="TextureRect7" type="TextureRect" parent="MarginContainer/Building/Upgrades/GridContainer"]
margin_left = 148.0
margin_top = 74.0
margin_right = 212.0
margin_bottom = 138.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="TextureRect8" type="TextureRect" parent="MarginContainer/Building/Upgrades/GridContainer"]
margin_left = 222.0
margin_top = 74.0
margin_right = 286.0
margin_bottom = 138.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Construction" type="TabContainer" parent="MarginContainer"]
visible = false
margin_right = 1010.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resource" type="CenterContainer" parent="MarginContainer/Construction"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 42.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Construction/Resource"]
margin_left = 501.0
margin_right = 501.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )
scroll_horizontal_enabled = false

[node name="ResourceBuildings" type="GridContainer" parent="MarginContainer/Construction/Resource/ScrollContainer"]
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4

[node name="Silo" type="CenterContainer" parent="MarginContainer/Construction"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 42.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Construction/Silo"]
margin_left = 501.0
margin_right = 501.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )
scroll_horizontal_enabled = false

[node name="SiloBuildings" type="GridContainer" parent="MarginContainer/Construction/Silo/ScrollContainer"]
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4

[node name="Tech" type="CenterContainer" parent="MarginContainer/Construction"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 42.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Construction/Tech"]
margin_left = 501.0
margin_right = 501.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )
scroll_horizontal_enabled = false

[node name="TechBuildings" type="GridContainer" parent="MarginContainer/Construction/Tech/ScrollContainer"]
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4

[node name="Defense" type="CenterContainer" parent="MarginContainer/Construction"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 42.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Construction/Defense"]
margin_left = 501.0
margin_right = 501.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )
scroll_horizontal_enabled = false

[node name="DefenseBuildings" type="GridContainer" parent="MarginContainer/Construction/Defense/ScrollContainer"]
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4

[node name="Misc" type="CenterContainer" parent="MarginContainer/Construction"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 505.0
margin_top = 42.0
margin_right = 497.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Construction/Misc"]
margin_left = 501.0
margin_right = 501.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )
scroll_horizontal_enabled = false

[node name="MiscBuildings" type="GridContainer" parent="MarginContainer/Construction/Misc/ScrollContainer"]
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4
